--- a/scss/main.scss
+++ b/scss/main.scss
@@ -166,7 +166,7 @@
 	}
 	.section,
 	.section--light {
-		// margin: 0;
+		margin: 0;
 		padding: 10px;
 		// color: $gravy-gray;
 		// background: $coal-gray;
@@ -242,7 +242,7 @@
 	}
 	.preview {
 		margin: 0;
-		padding: 0;
+		padding: 0 0 30px;
 		border: 0;
 		background: transparent;
 		text-align: center;
