Inicial commit with Handbook design

--- a/scss/atoms/icons/_icons.scss
+++ b/scss/atoms/icons/_icons.scss
@@ -46,7 +46,7 @@
 // .foo.wpcom-logo {
 // 	$size: 50px;
 
-// 	color: $base-lighter-blue;
+// 	color: $light-blue;
 // 	width: $size;
 // 	height: $size;
 
