--- a/scss/molecules/_nav-off-canvas.scss
+++ b/scss/molecules/_nav-off-canvas.scss
@@ -36,7 +36,7 @@
 	right: 0;
 	top: 0;
 	color: #fff;
-	font: 30px/44px $open-sans; // Change to Dashicon?
+	font: 30px/44px $sans; // Change to Dashicon?
 	cursor: pointer;
 	user-select: none;
 	z-index: 10001;
