--- a/scss/atoms/_base.scss
+++ b/scss/atoms/_base.scss
@@ -2,43 +2,26 @@
 //  Base styles: opinionated defaults
 // ==========================================================================
 
-// Sets box-sizing default to border-box on all elements
-*,
-*:before,
-*:after {
-	// Paul Irish box sizing!!!
-	// http://www.paulirish.com/2012/box-sizing-border-box-ftw/
-	box-sizing: border-box;
-
-	@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-	only screen and (min-resolution: 144dpi) {
-		// Style adjustments for high resolution devices
-
-		// Only looks good on HiDPI and on icons
-		-webkit-font-smoothing: antialiased;
-
-	}
-}
 html,
 button,
 input,
 select,
 textarea {
-	color: #333;
+	color: rgba($dark-gray,.9);
 }
 html,
 body {
-	background: $light-gray;
+	background: $ultra-light-gray;
 }
 body {
 	font-size: $root-font-size * 1px; // See EM in _functions.scss for info
-	line-height: 1.4;
-	font-family: $open-sans;
+	line-height: 1.618;
+	font-family: $sans;
 }
 
 // (highlight color, text color)
 ::selection {
-	background: #0074c2;
+	background: $medium-blue;
 	color: #fff;
 	text-shadow: none;
 }
