--- a/scss/atoms/_radio-buttons.scss
+++ b/scss/atoms/_radio-buttons.scss
@@ -28,7 +28,7 @@ input[type=radio] {
 		width: 8px;
 		height: 8px;
 		text-indent: -9999px;
-		background: $base-lighter-blue;
+		background: $light-blue;
 		vertical-align: middle;
 		border-radius: 50%;
 		animation: grow .2s ease-in-out;
