--- a/scss/atoms/_avatars.scss
+++ b/scss/atoms/_avatars.scss
@@ -1,5 +1,5 @@
 // ==========================================================================
-// Avatars!!!!
+// Avatars
 // ==========================================================================
 
 .avatar {
