--- a/scss/atoms/typography/_typography.scss
+++ b/scss/atoms/typography/_typography.scss
@@ -2,10 +2,19 @@
 // Typography
 // ==========================================================================
 
-$root-font-size: 18; // In pixels
 
-$normal: 400; // Change these values when using custom fonts
-$bold: 700; // For example, bold could change to 400;
+
+$root-font-size: 18; // In pixels
+$root-scale-ratio: 1.5; //used as global line-height as well
+
+
+
+// Weights
+
+$normal: 400;
+$bold: 700; 
+$serif-bold: 900;
+
 
 
 // Typeface Variables
@@ -20,6 +29,12 @@ $sans-fallback: Helvetica, Arial, sans-serif;
 $sans: 'Open Sans', $sans-fallback; // 400 400i 600 700 700i
 
 $sans-rtl: Tahoma, $sans-fallback;
+
+// NOTE:
+// If there are exceptions to these stacks, 
+// please mark them with a //typography-exception comment 
+// so we can easily search for them later.
+
 
 
 // Icons
@@ -53,7 +68,23 @@ $icon: 'automatticons', 'genericons', $sans;
 	speak: none;
 }
 
-// NOTE:
-// If there are exceptions to these stacks, 
-// please mark them with a //typography-exception comment 
-// so we can easily search for them later.
+
+
+
+// Styles
+
+body {
+	font-size: $root-font-size * 1px; // See EM in _functions.scss for info
+	line-height: $root-scale-ratio;
+	font-family: $sans;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: $serif;
+	font-weight: $serif-bold;
+}
