--- a/scss/organisms/_page-navigation.scss
+++ b/scss/organisms/_page-navigation.scss
@@ -5,7 +5,7 @@
 
 .page-links {
 	padding: 0;
-	border-top: 1px solid $medium-gray;
+	border-top: 1px solid rgba($medium-gray,.5);
 	ul {
 		list-style: none;
 		margin: 0;
