--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,6 +41,7 @@ WordPress.com Styles
 //Templates Parts
 @import "organisms/header";
 @import "organisms/site-navigation";
+@import "organisms/page-header"; 
 @import "organisms/page-navigation"; 
 @import "templates/layout"; // Basic Layout build
 
