--- a/css/style.css
+++ b/css/style.css
@@ -2026,17 +2026,19 @@ textarea {
 }
 .site-header h1 {
   display: inline;
-  font-size: 1.5em;
+  font-size: 1.75em;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-weight: 400;
   line-height: 1.2;
   margin: 0;
+  text-rendering: optimizeLegibility;
 }
 .site-header h1 .design-handbook {
   display: block;
   font-size: 0.667em;
   font-weight: 700;
   text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.5);
 }
 .site-header a {
   color: rgba(255, 255, 255, 0.9);
@@ -2071,7 +2073,9 @@ textarea {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   speak: none;
-  margin: 0 0 0 -1.2em;
+  margin: 0.102em 0 0 -1.2em;
+  position: absolute;
+  color: rgba(255, 255, 255, 0.9);
 }
 
 /**
@@ -2227,7 +2231,7 @@ body {
 .page .page-header {
   margin-bottom: 2.25em;
   padding-bottom: 3.375em;
-  border-bottom: 1px solid rgba(210, 222, 230, 0.5);
+  border-bottom: 5px solid rgba(210, 222, 230, 0.5);
 }
 .page .page-header h1, .page .page-header p {
   margin: 0;
