--- a/scss/organisms/_header.scss
+++ b/scss/organisms/_header.scss
@@ -17,6 +17,9 @@
 	width: $sidebar-width - ( 0.519em * 2 );
 	z-index: 9998;
 
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+
 	//box-shadow: inset 0 -5px rgba(0, 86, 132, 0.1);
 
 	h1 {
@@ -26,7 +29,7 @@
 		font-weight: 400;
 		line-height: 1.2;
 		margin: 0;
-		text-rendering: optimizeLegibility;
+		
 
 		.design-handbook {
 			display: block;
